@@ -1175,6 +1175,10 @@
         wikiuser = "Greywhind"
     [/entry]
     [entry]
+        name = "Nathan Walker (RiftWalker)"
+        email = "nathan.b.walker@vanderbilt.edu"
+    [/entry]
+    [entry]
         name = "Oleg Tsarev"
         email = "zabivator@gmail.com"
     [/entry]
