@@ -87,6 +87,7 @@ Version 1.13.0-dev:
    * Added support for [elseif] tags inside [if]
    * Schema validator messages now conform better to the new WML
      parser/preprocessor diagnostics format introduced in version 1.11.10.
+   * Added define= functionality to scenarios and eras.
  * Miscellaneous and bug fixes:
    * replace 'fight_on_without_leader'=yes/no with defeat_condition=no_leader/
      no_units/always/never which allows the wml developer to decide when a side
